1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (ds_device_read, S_io_read): Fix sloppy bugs in last change.

1999-07-06  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot.c (load_image): Use mmap instead of vm_allocate, when
	allocating in mach_task_self ().
	(boot_script_exec_cmd): Likewise.
	(set_mach_stack_args): Likewise.
	(read_reply): Likewise.
	(S_io_read): Likewise.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c: Add #include <sys/mman.h> for munmap decl.

Mon Jul  5 20:04:06 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot.c (load_image): Fix typo in cast.  Reported by Yamashita
	TAKAO <jargon@lares.dti.ne.jp>.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot.c (load_image): Use munmap instead of vm_deallocate when
	it's from our own task.
	(boot_script_read_file): Likewise.
	(boot_script_exec_cmd): Likewise.
	(set_mach_stack_args): Likewise.
	(ds_device_read_inband): Likewise.

1999-03-20  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (S_term_get_peername): New function.

1999-03-14  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c: Fix typo in last change.

1999-03-10  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (main): Only use real device name if root_store is for an
	enforced single run starting at the beginning of the device.

1999-03-09  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (main): Add newline to error msg.
	Patch by Marcus Brinkmann <Marcus.Brinkmann@ruhr-uni-bochum.de>.

1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (S_io_revoke): Add reply, replyPoly args.

Tue Feb 16 05:06:12 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot.c (S_io_revoke): New (unsupported) routine.

1998-12-26  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (isig): New variable.
	(init_termstate): If it's set, set ISIG flag in c_lflag.
	(options): New option -I/--isig.
	(parse_opt): Make -I set `isig'.